--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+@font-face {
+  font-family: "sansman";
+  src: local("sansman"),
+    url("./fonts/enter-sansman.bold.ttf") format("truetype");
+  font-weight: bold;
+}
