--- a/src/components/SlickSlider/SlickSlider.css
+++ b/src/components/SlickSlider/SlickSlider.css
@@ -22,26 +22,26 @@
 }
 
 .arrow {
-  background-color: #fff;
   position: absolute;
   cursor: pointer;
   z-index: 10;
 }
 
-.arrow svg {
+.arrow {
   transition: color 300ms;
+  color: #73f59b;
 }
 
-.arrow svg:hover {
+.arrow:hover {
   color: #68edff;
 }
 
 .next {
-  right: 0%;
+  right: 25%;
   top: 50%;
 }
 
 .prev {
-  left: 0%;
+  left: 25%;
   top: 50%;
 }
