--- a/src/components/SlickSlider/SlickSlider.css
+++ b/src/components/SlickSlider/SlickSlider.css
@@ -13,7 +13,7 @@
 }
 
 .activeSlide {
-  transform: scale(1.1);
+  transform: scale(1.5);
   opacity: 1;
 }
 
@@ -40,4 +40,9 @@
 .prev {
   left: 25%;
   top: 50%;
+}
+
+.slick-list {
+  padding-top: 48px;
+  padding-bottom: 40px;
 }
