--- a/src/components/Overview/Overview.css
+++ b/src/components/Overview/Overview.css
@@ -1,21 +1,9 @@
-/* .neon-content:before,
-.neon-header:before {
-  background: linear-gradient(180deg, #73e4f5 0%, #73f59b 100%);
-  height: 100%;
-  width: 100%;
-  filter: blur(150px);
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-} */
-
 .box::before {
   content: "";
   position: absolute;
-  width: 150px;
-  height: 160%;
-  background: linear-gradient(#ffffff, #001fff);
+  width: 300px;
+  height: 200%;
+  background: linear-gradient(#001fff, #001fff);
   animation: animate 6s linear infinite;
 }
 
@@ -23,7 +11,6 @@
   content: "";
   position: absolute;
   inset: 4px;
-  background: #000000;
   border-radius: 16px;
 }
 
